--- a/Assignment1/Assignment1/Assignment1.vcxproj.filters
+++ b/Assignment1/Assignment1/Assignment1.vcxproj.filters
@@ -18,14 +18,23 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="maths_funcs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\shader_s.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Include\maths_funcs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Include\teapot.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Shaders\fragmentShader.fs" />
-    <None Include="..\Shaders\vertexShader.vs" />
+    <Text Include="..\Shaders\simpleFragmentShader.txt" />
+    <Text Include="..\Shaders\simpleVertexShader.txt" />
   </ItemGroup>
 </Project>
