--- a/Assignment1/Assignment1/Assignment1.vcxproj.filters
+++ b/Assignment1/Assignment1/Assignment1.vcxproj.filters
@@ -37,4 +37,8 @@
     <Text Include="..\Shaders\simpleFragmentShader.txt" />
     <Text Include="..\Shaders\simpleVertexShader.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="monkeyhead_smooth.dae" />
+    <None Include="..\cyl.dae" />
+  </ItemGroup>
 </Project>
