--- a/Assignment1/Assignment1/Assignment1.vcxproj
+++ b/Assignment1/Assignment1/Assignment1.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{5AEBF4BE-B613-41E4-BAC1-F71BEA10BDE0}</ProjectGuid>
     <RootNamespace>Assignment1</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -76,11 +76,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\barryc10\Desktop\Assignments\Assignment1\Shaders;C:\Users\barryc10\Desktop\Assignments\Assignment1\Assignment1\glew-1.10.0\include;C:\Users\barryc10\Desktop\Assignments\Assignment1\Assignment1\glm;C:\Users\barryc10\Desktop\Assignments\Assignment1\Include;C:\Users\barryc10\Desktop\Assignments\Assignment1\Assignment1\freeglut\include;C:\Users\Caolan\Desktop\Assignments\Assignment1\Assignment1\glm;C:\Users\Caolan\Desktop\Assignments\Assignment1\Include;C:\Users\Caolan\Desktop\Assignments\Assignment1\Assignment1\glew-1.10.0\include;C:\Users\Caolan\Desktop\Assignments\Assignment1\Assignment1\freeglut\include;C:\Users\Caolan\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\glm;C:\Users\barryc10\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Include;C:\Users\Caolan\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Include;C:\Users\Caolan\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\glew-1.10.0\include;C:\Users\Caolan\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\freeglut\include;C:\Users\barryc10\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\freeglut\include;C:\Users\barryc10\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\glew-1.10.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Caolan\Desktop\Computer Graphics\Assignment1\Assignment1\assimp\include;C:\Users\barryc10\Desktop\Assignments\Assignment1\Shaders;C:\Users\barryc10\Desktop\Assignments\Assignment1\Assignment1\glew-1.10.0\include;C:\Users\barryc10\Desktop\Assignments\Assignment1\Assignment1\glm;C:\Users\barryc10\Desktop\Assignments\Assignment1\Include;C:\Users\barryc10\Desktop\Assignments\Assignment1\Assignment1\freeglut\include;C:\Users\Caolan\Desktop\Assignments\Assignment1\Assignment1\glm;C:\Users\Caolan\Desktop\Assignments\Assignment1\Include;C:\Users\Caolan\Desktop\Assignments\Assignment1\Assignment1\glew-1.10.0\include;C:\Users\Caolan\Desktop\Assignments\Assignment1\Assignment1\freeglut\include;C:\Users\Caolan\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\glm;C:\Users\barryc10\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Include;C:\Users\Caolan\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Include;C:\Users\Caolan\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\glew-1.10.0\include;C:\Users\Caolan\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\freeglut\include;C:\Users\barryc10\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\freeglut\include;C:\Users\barryc10\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\glew-1.10.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>C:\Users\barryc10\Desktop\Assignments\Assignment1\Assignment1\glew-1.10.0\lib\Release\Win32;C:\Users\barryc10\Desktop\Assignments\Assignment1\Assignment1\freeglut\lib;C:\Users\barryc10\Desktop\Assignments\Assignment1\Assignment1\freeglut\lib\x64;C:\Users\Caolan\Desktop\Assignments\Assignment1\Assignment1\glew-1.10.0\lib\Release\Win32;C:\Users\Caolan\Desktop\Assignments\Assignment1\Assignment1\freeglut\lib;C:\Users\Caolan\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\glew-1.10.0\lib\Release\Win32;C:\Users\barryc10\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\glew-1.10.0\lib\Release\Win32;C:\Users\Caolan\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\freeglut\lib;C:\Users\barryc10\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>freeglut.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Caolan\Desktop\Computer Graphics\Assignment1\Assignment1\assimp\lib\Debug;C:\Users\barryc10\Desktop\Assignments\Assignment1\Assignment1\glew-1.10.0\lib\Release\Win32;C:\Users\barryc10\Desktop\Assignments\Assignment1\Assignment1\freeglut\lib;C:\Users\barryc10\Desktop\Assignments\Assignment1\Assignment1\freeglut\lib\x64;C:\Users\Caolan\Desktop\Assignments\Assignment1\Assignment1\glew-1.10.0\lib\Release\Win32;C:\Users\Caolan\Desktop\Assignments\Assignment1\Assignment1\freeglut\lib;C:\Users\Caolan\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\glew-1.10.0\lib\Release\Win32;C:\Users\barryc10\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\glew-1.10.0\lib\Release\Win32;C:\Users\Caolan\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\freeglut\lib;C:\Users\barryc10\Desktop\4th Year\Computer Graphics\Assignments\Assignment1\Assignment1\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>assimp.lib;freeglut.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -134,6 +134,10 @@
   <ItemGroup>
     <Text Include="..\Shaders\simpleFragmentShader.txt" />
     <Text Include="..\Shaders\simpleVertexShader.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\cyl.dae" />
+    <None Include="monkeyhead_smooth.dae" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
