--- a/Final Project/FinalProject/Final Project/Final Project.vcxproj.filters
+++ b/Final Project/FinalProject/Final Project/Final Project.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClInclude Include="..\Include\teapot.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="mesh.h">
+    <ClInclude Include="graphicObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -35,7 +35,7 @@
     <ClCompile Include="maths_funcs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="mesh.cpp">
+    <ClCompile Include="graphicObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
