--- a/Final Project/FinalProject/Final Project/Final Project.vcxproj
+++ b/Final Project/FinalProject/Final Project/Final Project.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{B462BC51-96C4-459C-8E01-D431EB81D271}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>FinalProject</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -161,6 +161,7 @@
     <ClInclude Include="..\Include\shader_s.h" />
     <ClInclude Include="..\Include\teapot.h" />
     <ClInclude Include="graphicObject.h" />
+    <ClInclude Include="ShaderAndObjects.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Final Project.cpp" />
