--- a/Final Project/FinalProject/Final Project/Final Project.vcxproj
+++ b/Final Project/FinalProject/Final Project/Final Project.vcxproj
@@ -169,8 +169,8 @@
     <ClCompile Include="graphicObject.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Shaders\FragmentShader.fs" />
-    <None Include="..\Shaders\VertexShader.vs" />
+    <None Include="..\Shaders\FragmentShader.glsl" />
+    <None Include="..\Shaders\VertexShader.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
