--- a/Final Project/FinalProject/Final Project/Final Project.vcxproj.filters
+++ b/Final Project/FinalProject/Final Project/Final Project.vcxproj.filters
@@ -43,7 +43,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Shaders\FragmentShader.fs" />
-    <None Include="..\Shaders\VertexShader.vs" />
+    <None Include="..\Shaders\FragmentShader.glsl" />
+    <None Include="..\Shaders\VertexShader.glsl" />
   </ItemGroup>
 </Project>
